# imf-reader

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  mkdocs.yml  pyproject.toml  requirements.txt
.github/workflows/: documentation.yml  release.yml  tests.yml
docs/: Makefile  advanced-usage.md  conf.py  contributing.md  example.ipynb  getting-started.md  index.md  make.bat  sdr-allocations.md  sdr-rates.md  weo-data.md
src/imf_reader/: __init__.py  config.py  utils.py
src/imf_reader/cache/: __init__.py  config.py  dataframe.py  http.py  legacy.py  manager.py
src/imf_reader/sdr/: __init__.py  clear_cache.py  read_announcements.py  read_exchange_rate.py  read_interest_rate.py
src/imf_reader/weo/: __init__.py  api.py  extract.py  parser.py  reader.py  scraper.py  weo.py
tests/: conftest.py  test_imf_reader.py  test_utils.py
tests/test_cache/: test_clear_cache_integration.py  test_config.py  test_dataframe.py  test_http_session.py  test_legacy_shims.py  test_manager.py
tests/test_sdr/: test_clear_cache.py  test_read_announcements.py  test_read_exchange_rate.py  test_read_interest_rate.py
tests/test_weo/: test_parser.py  test_reader.py  test_scraper.py  test_weo.py
