[project]
name = "imf-reader"
version = "1.4.0"
description = "A package to access imf data"
authors = [{ name = "The ONE Campaign" }]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pandas>=2.2.2",
    "requests>=2.32.1",
    "chardet>=5.2.0",
    "beautifulsoup4>=4.12.3",
    "sdmx1>=2.23.1",
    "packaging>=24.0",  # required by sdmx1 but not declared
    "diskcache>=5.6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "black>=24.4.2",
    "sphinx>=7.3.7",
    "myst-nb>=1.1.0",
    "autoapi>=2.0.1",
    "sphinx-autoapi>=3.0.0",
    "sphinx-rtd-theme>=2.0.0",
    "pytest-cov>=5.0.0",
]

[tool.semantic_release]
version_toml = [
    "pyproject.toml:project.version",
]
branch = "main"
changelog_file = "CHANGELOG.md"
build_command = "pip install uv && uv build"

[build-system]
requires = ["uv_build>=0.9.15,<0.10"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.0.1",
]
